src/test/deca/syntax/valid/bool/test-bool-false.deca
// Description:
//    Test sur les booleans
//
// Resultats:
//    affiche false
// 
// Historique:
//    cree le 01/01/2025

{
    println(false);
}